syntax = "proto3";

option go_package = "./;order";

message OrderProducts {
  int64 OrderId = 1;
  int64 ProductId = 2;
  int64 Number = 3;
  float Price = 4;
  float PriceWithPromo = 5;
  string Image = 6;
  string Name = 7;
  float Rating = 8;
  string Description = 9;
  bool  Sales = 10;
}

message ArrayOrderProducts {
  repeated OrderProducts Products = 1;
}
message Address {
  string Country = 1;
  string Region = 2;
  string City = 3;
  string Street = 4;
  string House = 5;
  string Flat = 6;
  string Index = 7;
}

message Order {
  int64 OrderId = 1;
  int64 UserId = 2;
  string Date = 3;
  Address Address = 4;
  float Cost = 5;
  float CostWithPromo = 6;
  string Status = 7;
  string Promocode = 8;
  repeated OrderProducts Products = 9;
  string Email = 10;
}

message OrderCost {
  int64 OrderId = 1;
  float Cost = 2;
}

message ArrayOrders {
  repeated Order Orders = 1;
}

message UserIdOrder {
  int64 UserId = 1;
}

service OrderService {
    rpc PutOrder(Order) returns (OrderCost) {}
    rpc GetAllOrders(UserIdOrder) returns (ArrayOrders) {}
    rpc GetProductsPriceWithPromo (Order) returns (Order) {}
}
